# VisionAI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: data-engineer.md  ml-engineer.md  vision-engineer.md
.claude/commands/: data.md  deploy.md  eval.md  train.md
frontend/: index.html
src/visionai/: __init__.py
